<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/register"
    tools:context=".Home.Activity.MainRegister">

    <TextView
        android:id="@+id/tv_registerlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoRegister"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/ed_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_logperson"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="UserName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_username"
        android:textColor="@color/white"
        android:textColorHint="@color/design_default_color_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registerlogo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_logemail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_email"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_username"
        app:layout_constraintStart_toStartOf="@+id/ed_register_username"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_username"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edRegisterpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_loginsecurity"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edRegisterEmail"
        app:layout_constraintStart_toStartOf="@+id/edRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/edRegisterEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/ed_register_confirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_loginsecurity"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="ConfirmPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_confirmpass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edRegisterpassword"
        app:layout_constraintStart_toStartOf="@+id/edRegisterpassword"
        app:layout_constraintTop_toBottomOf="@+id/edRegisterpassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_regisiter"
        android:backgroundTint="@color/white"
        android:text="@string/btn_register"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/ed_register_confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_confirmpassword" />

    <TextView
        android:id="@+id/tv_register_alreadyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tv_register_haveaccount"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
</androidx.constraintlayout.widget.ConstraintLayout>