<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        android:background="#B3ADAD"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/row_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8">

                <ImageButton
                    android:id="@+id/btn_delethitory"
                    android:layout_width="59dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/DanubeBlue"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_status_histroy"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_startpoint_histroy"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_histroy"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tv_date_history"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"

                    android:text="@string/tv_date_hisrory"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_nametrip_histroy"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_nametrip_histroy"
                    android:textColor="@color/mysticblue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_date_history"
                    app:layout_constraintHorizontal_bias="0.222"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_history" />

                <TextView
                    android:id="@+id/tv_startpoint_histroy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_startpoint_histroy"
                    app:layout_constraintEnd_toEndOf="@+id/tv_nametrip_histroy"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nametrip_histroy" />

                <TextView
                    android:id="@+id/tv_endpointTrip_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_endpointTrip_history"
                    app:layout_constraintEnd_toEndOf="@+id/tv_startpoint_histroy"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_startpoint_histroy" />

                <TextView
                    android:id="@+id/tv_time_histroy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/tv_time_histroy"
                    app:layout_constraintStart_toEndOf="@+id/tv_date_history"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_status_histroy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/tv_status_histroy"
                    app:layout_constraintStart_toEndOf="@+id/tv_time_histroy"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>