<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".Home.Activity.MainLogin">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_regisiter"
        android:backgroundTint="@color/white"
        android:text="@string/btn_login"

        android:textAllCaps="false"
        android:textColor="@color/DanubeBlue"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
        app:layout_constraintStart_toStartOf="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_forgitpasss" />

    <Button
        android:id="@+id/btn_loginGoogle"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_regisiter"

        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/btn_loginGoogle"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/DanubeBlue"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_logemail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_email"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_logo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_register"
        android:drawableLeft="@drawable/ic_loginsecurity"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ed_register_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dont have an Account?"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="SignUp?"
            android:textColor="#B39DDB"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_forgitpasss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_login_forgetpass"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <TextView
        android:id="@+id/tv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_logo"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />


</androidx.constraintlayout.widget.ConstraintLayout>