<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/layout_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/images" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvUsernameprofile"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/TomatoOrange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailprofile" />


    <TextView
        android:id="@+id/tvEmailprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="304dp"
        android:text="@string/e_mail"
        android:textColor="@color/TomatoOrange"
        app:layout_constraintStart_toStartOf="@id/tvUsernameprofile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSync"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_shape"
        android:text="@string/syn"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameprofile"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonOut"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_shape"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvEmailprofile" />



</androidx.constraintlayout.widget.ConstraintLayout>